// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CalendarViewPicker Day 1`] = `
<div
  class="CalendarViewPicker-box"
>
  <div
    class="item-box active"
  >
    <input
      id="calendar-view-day"
      name="calendar-view"
      type="radio"
      value="day"
    />
     
    <label
      class="unselectable clickable"
      for="calendar-view-day"
    >
      Day
    </label>
  </div>
   
  <div
    class="item-box"
  >
    <input
      id="calendar-view-month"
      name="calendar-view"
      type="radio"
      value="month"
    />
     
    <label
      class="unselectable clickable"
      for="calendar-view-month"
    >
      Month
    </label>
  </div>
   
  <div
    class="item-box"
  >
    <input
      id="calendar-view-week"
      name="calendar-view"
      type="radio"
      value="week"
    />
     
    <label
      class="unselectable clickable"
      for="calendar-view-week"
    >
      Week
    </label>
  </div>
   
  <div
    class="item-box select-box day"
  />
</div>
`;

exports[`Storyshots CalendarViewPicker Month 1`] = `
<div
  class="CalendarViewPicker-box"
>
  <div
    class="item-box"
  >
    <input
      id="calendar-view-day"
      name="calendar-view"
      type="radio"
      value="day"
    />
     
    <label
      class="unselectable clickable"
      for="calendar-view-day"
    >
      Day
    </label>
  </div>
   
  <div
    class="item-box active"
  >
    <input
      id="calendar-view-month"
      name="calendar-view"
      type="radio"
      value="month"
    />
     
    <label
      class="unselectable clickable"
      for="calendar-view-month"
    >
      Month
    </label>
  </div>
   
  <div
    class="item-box"
  >
    <input
      id="calendar-view-week"
      name="calendar-view"
      type="radio"
      value="week"
    />
     
    <label
      class="unselectable clickable"
      for="calendar-view-week"
    >
      Week
    </label>
  </div>
   
  <div
    class="item-box select-box month"
  />
</div>
`;

exports[`Storyshots CalendarViewPicker Week 1`] = `
<div
  class="CalendarViewPicker-box"
>
  <div
    class="item-box"
  >
    <input
      id="calendar-view-day"
      name="calendar-view"
      type="radio"
      value="day"
    />
     
    <label
      class="unselectable clickable"
      for="calendar-view-day"
    >
      Day
    </label>
  </div>
   
  <div
    class="item-box"
  >
    <input
      id="calendar-view-month"
      name="calendar-view"
      type="radio"
      value="month"
    />
     
    <label
      class="unselectable clickable"
      for="calendar-view-month"
    >
      Month
    </label>
  </div>
   
  <div
    class="item-box active"
  >
    <input
      id="calendar-view-week"
      name="calendar-view"
      type="radio"
      value="week"
    />
     
    <label
      class="unselectable clickable"
      for="calendar-view-week"
    >
      Week
    </label>
  </div>
   
  <div
    class="item-box select-box week"
  />
</div>
`;
